--- a/server/package.json
+++ b/server/package.json
@@ -8,10 +8,12 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": "",
   "dependencies": {
     "body-parser": "^2.2.0",
     "cors": "^2.8.5",
-    "express": "^4.21.2"
-  }
+    "dotenv": "^17.2.2",
+    "express": "^4.21.2",
+    "pg": "^8.16.3"
+  },
+  "description": ""
 }
